<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crave</string>
    <string name="action_settings">Settings</string>
    <string name="overview_title">Overview</string>
    <string name="recipes_title">Recipies</string>
    <string name="near_me_title">Near Me</string>
    <string name="alternatives_title">Alternatives</string>
    <string name="search">Search</string>
    <string name="search_again">Search Again</string>
    <string name="title_activity_food_select">FoodSelectActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="what_are_you_craving">What are you craving?</string>

    <!-- Overview Nutrition Label Text -->
    <string name="nutrition_label">Nutrition Facts</string>
    <string name="servingsize">Serving Size</string>
    <string name="calories">Calories</string>
    <string name="caloriesfromfat">Calories From Fat</string>
    <string name="totalfat">Total Fat</string>
    <string name="saturatedfat">Saturated Fat</string>
    <string name="transfat">Trans Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="totalcarbs">Total Carbohydrate</string>
    <string name="dietaryfiber">Dietary Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="protein">Protein</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="vitaminB">Vitamin B</string>
    <string name="vitaminC">Vitamin C</string>
    <string name="vitaminD">Vitamin D</string>
    <string name="vitaminE">Vitamin E</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>

</resources>